Mon Jan 23 16:46:20 2006  Tim Janik  <timj@imendio.com>

	* glib/gslice.c (slice_config_init): initialize GSlice config from
	G_SLICE environemtn variable. we support G_SLICE=always-malloc
	currently, which forces all g_slice_*() allocations to use the system
	malloc instead.

	* glib/gutils.c: 
	g_parse_debug_string(): added a note about not using g_malloc() here.
	_g_getenv_nomalloc(): getenv() variant that doesn't use g_malloc or 
	g_slice. contains only guesswork in the WIN32 branch.

2006-01-18  Matthias Clasen  <mclasen@redhat.com>

	* Bump version
	
	* === Released 2.9.4 ===

	* NEWS: Updates

2006-01-17  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c (g_key_file_get_groups): Correct a g_new0()
	call.  (#327421, Morten Welinder)

2006-01-17  Sebastian Wilhelmi  <seppi@seppi.de>

	* glib/gthreadpool.c: To avoid deadlocks get rid of the settings
	G_LOCK. Use the unused_thread_queue lock instead. Change
	g_thread_pool_thread_proxy such that threads only wait on
	non-exlusive pools for at most a 1/2 second. Do not reorder tasks
	due to superfluous tasks. Global tasks wait at most for
	max-idle-time milliseconds. Make sure, that no task is woken up
	twice for the same event via a wakeup_serial. This fixes #324228.

	* tests/threadpool-test.c: Adapt test accordingly. Do not pass
	invalid NULL into the thread pools. This as well fixes #327290.

2006-01-16  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.9.3 ===

	* NEWS: Updates

	* glib/gthread.h (g_static_mutex_get_mutex_impl_shortcut): 
	Rework the strict aliasing fix to not break C++, pointed
	out by Murray Cumming.
	
	* glib/gasyncqueue.c (g_async_queue_push_sorted_unlocked):
	Signal waiting threads, problem noticed by Christian Kellner.

2006-01-16  Matthias Clasen  <mclasen@redhat.com>

	Fix bug 326747, Alberto Ruiz:
	
	* glib/gconvert.c (make_valid_utf8): Change this function to
	replace unknown characters by the Unicode replacement character